RESOLVED FIXED201865
REGRESSION(r249275): [GTK][WPE] WebPage injected bundle messages no longer work
https://bugs.webkit.org/show_bug.cgi?id=201865
Summary REGRESSION(r249275): [GTK][WPE] WebPage injected bundle messages no longer work
Carlos Garcia Campos
Reported 2019-09-17 03:17:01 PDT
We use them to implement the web resources API. This is another regression of r249275 because we are using the page proxy identifier when we really want to the web page identifier.
Attachments
Patch (1.57 KB, patch)
2019-09-17 03:18 PDT, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2019-09-17 03:18:57 PDT
EWS Watchlist
Comment 2 2019-09-17 03:19:33 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2019-09-17 04:04:24 PDT
Note You need to log in before you can comment on or make changes to this bug.