REGRESSION(r249275): [GTK][WPE] WebPage injected bundle messages no longer work https://bugs.webkit.org/show_bug.cgi?id=201865

Reviewed by Žan Doberšek.

We use them to implement the web resources API. This is another regression of r249275 because we are using the
page proxy identifier when we really want to the web page identifier.

* UIProcess/API/glib/WebKitWebContext.cpp:
(webkitWebContextGetWebViewForPage): Use WebPageProxy::webPageID() instead of WebPageProxy::identifier().

Canonical link: https://commits.webkit.org/215503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249952 268f45cc-cd09-0410-ab3c-d52691b4dbfc